<resources>
    <string name="app_name">TimeTable</string>

    <string name="p1">09:00-09:55</string>
    <string name="p2">09:55-10:50</string>
    <string name="p3">10:50-11:45</string>
    <string name="p4">11:45-12:40</string>
    <string name="p5">01:20-05:00</string>
    
    <string name="dsa">DSA</string>
    <string name="ds">DS</string>
    <string name="oop">OOPS</string>
    <string name="coa">COA</string>
    <string name="evs">EVS</string>
    <string name="math">MATH 3</string>
    <string name="dl">DSA Lab</string>
    <string name="ol">OOPS Lab</string>
    <string name="no">Free</string>
</resources>
